--- a/portifolio_ms/src/components/Services/Services.css
+++ b/portifolio_ms/src/components/Services/Services.css
@@ -35,3 +35,21 @@
   height: 3rem;
   margin-top: 1rem;
 }
+
+.cards {
+  position: relative;
+}
+
+.cards>* {
+  position: absolute;
+}
+
+.s-blur1 {
+  left: 14rem;
+  top: 8rem;
+}
+
+.s-blur2 {
+  left: 38rem;
+  top: 10rem;
+}
