--- a/portifolio_ms/src/index.css
+++ b/portifolio_ms/src/index.css
@@ -16,7 +16,7 @@
   --black: #242d49;
   --gray: #788097;
   --bluecard: #ddf8fe;
-  --purple: #rgb(238, 210, 255);
+  --purple: rgb(238, 210, 255);
   --boxshadow: 0px 19px 60px rgb(0 0 0 / 8%);
   --orangecard: rgba(252, 166, 31, 0.45);
   --smboxshadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
